--- a/src/app/weather/weather.page.html
+++ b/src/app/weather/weather.page.html
@@ -1,22 +1,1 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Weather</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Weather</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-   <p>
-     Weather works
-   </p>
-  </div>
-</ion-content>
+<ion-router-outlet></ion-router-outlet>
