bien centre sur nonus meme

--- a/src/app/weather/map/map.component.html
+++ b/src/app/weather/map/map.component.html
@@ -16,8 +16,6 @@
   </ion-header>
 
   <div id="container">
-    <p>
-      map works!
-    </p>
+      <div id="mapId" style="height:300px"></div>
   </div>
 </ion-content>
